# MGWRVisualizer

./: README.md  netlify.toml
examples/: Georgia_Example.ipynb
mgwrvisualizer/: .prettierrc.json  package-lock.json  package.json  vite.config.js  windi.config.js
mgwrvisualizer/pythonclient/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  webclient_builder.py
mgwrvisualizer/pythonclient/mgwrvisualizer/: __init__.py  data_extractors.py  main.py  utils.py
mgwrvisualizer/pythonclient/webclient_dist/: index.html
mgwrvisualizer/pythonclient/webclient_dist/assets/: index.66507afe.css  index.7f565881.js
mgwrvisualizer/src/: App.vue  main.js
mgwrvisualizer/src/assets/: covariates.json  params.json
mgwrvisualizer/src/components/: Caterpillar.vue  RadioItem.vue  SelectMenu.vue
mgwrvisualizer/src/components/Controllers/: AttributeControl.vue  BandwithControl.vue  VizControl.vue
mgwrvisualizer/src/components/Map/: ColorKey.vue  DeckGL.vue  GeoJsonLayer.vue  Map.vue  Mapbox.vue
mgwrvisualizer/src/components/Visualizers/: Covariates.vue  Diagnostic.vue  ModelResults.vue
mgwrvisualizer/src/mapUtils/: bucketGenerator.js  fillVisualizer.js  types.js
mgwrvisualizer/src/router/: index.js
mgwrvisualizer/src/store/: dataStore.js  selectionStore.js
mgwrvisualizer/src/utils/: caterpillarSettings.js  defaultSettings.js  types.js
mgwrvisualizer/src/views/: Dashboard.vue
mgwrvisualizer/webclient/: .eslintrc.js  .gitignore  .prettierrc.json  windi.config.js
mgwrvisualizer/webclient/src/: App.vue
mgwrvisualizer/webclient/src/assets/: KN.json  (+3 more)
(+18 files in other folders)
